classDiagram
    iPhone <|-- ReprodutorMusical
    iPhone <|-- AparelhoTelefonico
    iPhone <|-- NavegadorInternet
    AparelhoTelefonico<|-- FuncaoIphone
    NavegadorInternet<|-- FuncaoIphone
    ReprodutorMusical<|-- FuncaoIphone
    ReprodutorMusical<|-- Ipod
    AparelhoTelefonico<|-- Phone
    NavegadorInternet<|--Internet
   
    class ReprodutorMusical{
      +tocar()
      +pausar()
      +selecionarMusica(String musica)
    }
    class AparelhoTelefonico{
      -ligar(String numero)
      -atender()
      -iniciarCorreioVoz()
    }
    class NavegadorInternet{
      +exibirPagina(String url)
      +adicionarNovaAba()
      +atualizarPagina()
    }
    class FuncaoIphone{
      
    }